results/scraper/box64/2156
[BOX32] Error: duplicate member ‘__res_query’ when building (GCC 10.5)
I feel so bad posting this cause I'm sure it's related to my older GCC again. 

```
[ 95%] Building C object CMakeFiles/box64.dir/src/wrapped32/wrappedlibresolv.c.o
In file included from /home/ubuntu/box64/src/wrapped32/wrappedlibresolv.c:29:
/home/ubuntu/box64/src/wrapped32/generated/wrappedlibresolvtypes32.h:23:5: error: duplicate member ‘__res_query’
   23 |  GO(res_query, iEpiipi_t) \
      |     ^~~~~~~~~
/home/ubuntu/box64/src/wrapped32/wrappercallback32.h:7:29: note: in definition of macro ‘GO’
    7 |     #define GO(A, B)    B   A;
      |                             ^
/home/ubuntu/box64/src/wrapped32/wrappercallback32.h:8:5: note: in expansion of macro ‘SUPER’
    8 |     SUPER()
      |     ^~~~~
/home/ubuntu/box64/src/wrapped32/generated/wrappedlibresolvtypes32.h:25:5: error: duplicate member ‘__res_search’
   25 |  GO(__res_search, iFpiipi_t)
      |     ^~~~~~~~~~~~
/home/ubuntu/box64/src/wrapped32/wrappercallback32.h:7:29: note: in definition of macro ‘GO’
    7 |     #define GO(A, B)    B   A;
      |                             ^
/home/ubuntu/box64/src/wrapped32/wrappercallback32.h:8:5: note: in expansion of macro ‘SUPER’
    8 |     SUPER()
      |     ^~~~~
make[2]: *** [CMakeFiles/box64.dir/build.make:4827: CMakeFiles/box64.dir/src/wrapped32/wrappedlibresolv.c.o] Error 1
make[2]: *** Waiting for unfinished jobs....
make[1]: *** [CMakeFiles/Makefile2:152: CMakeFiles/box64.dir/all] Error 2
make: *** [Makefile:163: all] Error 2
```

**OS and GCC tested:**
Description: Ubuntu 20.04.6 LTS
Release: 20.04
Codename: focal
gcc version 10.5.0 (Ubuntu 10.5.0-1ubuntu1~20.04)
